Change balc_ css class prefixes to bcrl_

--- a/BlazorCommon.RazorLib/Dialog/DialogDisplay.razor
+++ b/BlazorCommon.RazorLib/Dialog/DialogDisplay.razor
@@ -1,3 +1,5 @@
+@using BlazorCommon.RazorLib.Resize
+
 <div class="bcrl_dialog-display"
      style="@ElementDimensionsStyleCssString @IsMaximizedStyleCssString">
 
