--- a/BlazorCommon.RazorLib/Menu/MenuDisplay.razor.css
+++ b/BlazorCommon.RazorLib/Menu/MenuDisplay.razor.css
@@ -1,8 +1,3 @@
-﻿:root {
-    /* Sizes */
-    --bcrl_menu-display-focus-outline-size: 2px;
-}
-
-.bcrl_menu-display:focus {
+﻿.bcrl_menu-display:focus {
     outline: solid var(--bcrl_menu-display-focus-outline-size) var(--bcrl_outline-with-focus-color);
 }
