--- a/BlazorCommon.RazorLib/wwwroot/blazorCommon.css
+++ b/BlazorCommon.RazorLib/wwwroot/blazorCommon.css
@@ -254,33 +254,22 @@ ul.bcrl_indent-child-content {
     --bcrl_hr-opacity: 0.7;
     --bcrl_tree-view-display-focus-outline-size: 10px;
     --bcrl_tree-view-display-focus-outline-offset: -5px;
-}
-
-:root {
-    /* Sizes Text Editor */
-    --bte_text-editor-footer-height: 2.2em;
-    --bte_text-editor-footer-padding-left: 5px;
-    --bte_text-editor-header-height: 2.2em;
-    --bte_text-editor-header-padding-left: 5px;
-    --bte_text-editor-command-bar-height: 2.2em;
-    --bte_text-editor-command-bar-padding-left: 5px;
-    --bte_dialog-display-toolbar-height: 2rem;
-    --bte_dialog-display-z-index: 10;
-    --bte_dialog-display-box-shadow-blur-radius: 2px;
-    --bte_dialog-display-button-entry-margin-right: 5px;
-    --bte_dialog-display-button-entry-padding: 3px;
-    --bte_drag-display-z-index: 30;
-    --bte_dropdown-display-default-background-box-shadow-blur-radius: 2px;
-    --bte_dropdown-display-z-index: 20;
-    --bte_menu-display-focus-outline-size: 2px;
-    --bte_menu-option-display-padding-width: 10px;
-    --bte_menu-option-display-focus-outline-size: 2px;
-    --bte_notification-display-z-index: 15;
-    --bte_notification-display-box-shadow-blur-radius: 2px;
-    --bte_notification-display-toolbar-height: 2rem;
-    --bte_scrollbar-size: 10px;
-    --bte_diff-body-separator-width: 6px;
-    --bte_diff-header-height: 2em;
+    --bcrl_dialog-display-toolbar-height: 2rem;
+    --bcrl_dialog-display-z-index: 10;
+    --bcrl_dialog-display-box-shadow-blur-radius: 2px;
+    --bcrl_dialog-display-button-entry-margin-right: 5px;
+    --bcrl_dialog-display-button-entry-padding: 3px;
+    --bcrl_dropdown-display-z-index: 20;
+    --bcrl_dropdown-display-default-background-box-shadow-blur-radius: 2px;
+    --bcrl_drag-initializer-z-index: 30;
+    --bcrl_menu-display-focus-outline-size: 2px;
+    --bcrl_menu-option-display-padding-width: 10px;
+    --bcrl_menu-option-display-focus-outline-size: 2px;
+    --bcrl_notification-display-background-color: #2d2f34;
+    --bcrl_notification-display-toolbar-background-color: #071c57;
+    --bcrl_notification-display-z-index: 15;
+    --bcrl_notification-display-box-shadow-blur-radius: 2px;
+    --bcrl_notification-display-toolbar-height: 2rem;
 }
 
 /* Theme CSS */
@@ -309,6 +298,8 @@ ul.bcrl_indent-child-content {
     --bcrl_active-no-focus-background-color: #5c5757;
     --bcrl_primary-font-color: #d2d2d2;
     --bcrl_primary-border-color: #d7d7d7;
+    --bcrl_dialog-toolbar-foreground-color: var(--bcrl_primary-foreground-color);
+    --bcrl_dialog-toolbar-background-color: #071c57;
     --bcrl_dialog-display-background-color: #2d2f34;
     --bcrl_primary-box-shadow-color: #f5f5f5;
     --balc-primary-outline-color: #2d498b;
@@ -385,6 +376,8 @@ ul.bcrl_indent-child-content {
     --bcrl_active-no-focus-background-color: #c8c8c8;
     --bcrl_primary-font-color: black;
     --bcrl_primary-border-color: black;
+    --bcrl_dialog-toolbar-foreground-color: var(--bcrl_primary-foreground-color);
+    --bcrl_dialog-toolbar-background-color: #071c57;
     --bcrl_dialog-display-background-color: rgb(252, 252, 245);
     --bcrl_primary-box-shadow-color: #000000;
     --balc-primary-outline-color: #ADD6FF;
