--- a/BlazorCommon.RazorLib/Options/InputAppIconSize.razor
+++ b/BlazorCommon.RazorLib/Options/InputAppIconSize.razor
@@ -1,6 +1,8 @@
-<div class="bcrl_icon-settings-display">
+<div class="bcrl_settings-input bcrl_input-app-options-icon-size @CssClassString"
+     style="@CssStyleString">
+    
     Icon-Size (px):&nbsp;
     <input type="number"
-           @bind="IconSizeInPixels"
-           class="bcrl_input @InputElementCssClass" />
+           class="bcrl_input"
+           @bind="IconSizeInPixels"/>
 </div>
