Red toolbar for error notifications

--- a/BlazorCommon.RazorLib/Notification/NotificationDisplay.razor
+++ b/BlazorCommon.RazorLib/Notification/NotificationDisplay.razor
@@ -1,4 +1,4 @@
-﻿<div class="bcrl_notification"
+﻿<div class="bcrl_notification @(NotificationRecord.CssClassString ?? string.Empty)"
      style="@CssStyleString">
     <div class="bcrl_notification-toolbar">
         <div class="bcrl_notification-title">
