--- a/BlazorCommon.RazorLib/Notification/NotificationDisplay.razor.css
+++ b/BlazorCommon.RazorLib/Notification/NotificationDisplay.razor.css
@@ -15,6 +15,10 @@
     background-color: var(--bcrl_notification-display-toolbar-background-color);
 }
 
+.bcrl_notification-error .bcrl_notification-toolbar {
+    background-color: var(--bcrl_notification-display-toolbar-background-color-error);
+}
+
 .bcrl_notification-control-buttons {
     display: flex;
     align-items: center;
