--- a/BlazorCommon.RazorLib/Notification/NotificationDisplay.razor
+++ b/BlazorCommon.RazorLib/Notification/NotificationDisplay.razor
@@ -1,15 +1,16 @@
 ﻿<div class="bcrl_notification @(NotificationRecord.CssClassString ?? string.Empty)"
      style="@CssStyleString">
     <div class="bcrl_notification-toolbar">
-        <div class="bcrl_notification-title">
+        <div class="bcrl_notification-title bcrl_unselectable"
+             style="@NotificationTitleCssStyleString"
+             title="@NotificationRecord.Title">
             @NotificationRecord.Title
         </div>
 
         <div class="bcrl_notification-control-buttons">
-            @* TODO: I don't want to cross reference the Blazor{lib_name_here}. Instead I want to only have them all reference the BlazorShared project and communicate amongst themselves through interfaces if needed. I need to look into this. *@
-            @* <button class="bcrl_button" @onclick="ChangeNotificationToDialog"> *@
-            @*     <IconEmptyWindow/> *@
-            @* </button> *@
+            <button class="bcrl_button" @onclick="ChangeNotificationToDialog">
+                <IconEmptyWindow/>
+            </button>
             <button class="bcrl_button" @onclick="DisposeNotification">
                 <IconClose/>
             </button>
