Add elipsis to Dialog title

--- a/BlazorCommon.RazorLib/Dialog/DialogDisplay.razor
+++ b/BlazorCommon.RazorLib/Dialog/DialogDisplay.razor
@@ -12,7 +12,9 @@
 
     <div class="bcrl_dialog-display-toolbar"
          @onmousedown="SubscribeMoveHandle">
-        <div class="bcrl_dialog-display-title bcrl_unselectable">
+        <div class="bcrl_dialog-display-title bcrl_unselectable"
+             style="@DialogTitleCssStyleString"
+             title="@DialogRecord.Title">
             @DialogRecord.Title
         </div>
 
