Padding for Dialogs and Notifications

--- a/BlazorCommon.RazorLib/Notification/NotificationDisplay.razor
+++ b/BlazorCommon.RazorLib/Notification/NotificationDisplay.razor
@@ -8,10 +8,10 @@
         </div>
 
         <div class="bcrl_notification-control-buttons">
-            <button class="bcrl_button" @onclick="ChangeNotificationToDialog">
+            <button class="bcrl_button bcrl_notification-button-entry" @onclick="ChangeNotificationToDialog">
                 <IconEmptyWindow/>
             </button>
-            <button class="bcrl_button" @onclick="DisposeNotification">
+            <button class="bcrl_button bcrl_notification-button-entry" @onclick="DisposeNotification">
                 <IconClose/>
             </button>
         </div>
