--- a/BlazorCommon.RazorLib/Dialog/DialogDisplay.razor.css
+++ b/BlazorCommon.RazorLib/Dialog/DialogDisplay.razor.css
@@ -13,6 +13,7 @@
     color: var(--bcrl_dialog-toolbar-foreground-color);
     background-color: var(--bcrl_dialog-toolbar-background-color);
     cursor: default;
+    padding: var(--bcrl_dialog-display-toolbar-padding);
 }
 
 .bcrl_dialog-display-title {
@@ -31,13 +32,17 @@
 }
 
 .bcrl_dialog-display-button-entry {
-    margin-right: var(--bcrl_dialog-display-button-entry-margin-right);
     padding: var(--bcrl_dialog-display-button-entry-padding);
     display: inline-flex;
     height: fit-content;
 }
 
+.bcrl_dialog-display-button-entry:not(:last-of-type) {
+    margin-right: var(--bcrl_dialog-display-button-entry-margin-right);
+}
+
 .bcrl_dialog-display-body {
     height: calc(100% - var(--bcrl_dialog-display-toolbar-height));
     overflow: auto;
+    padding: var(--bcrl_dialog-display-body-padding);
 }
