Render in Solution Explorer the Solution Folder Nodes

--- a/BlazorCommon.RazorLib/wwwroot/blazorCommon.css
+++ b/BlazorCommon.RazorLib/wwwroot/blazorCommon.css
@@ -323,6 +323,7 @@ ul.bcrl_indent-child-content {
     --bcrl_resize-column-background-color: #d7d7d7;
     --bcrl_resize-row-background-color: #d7d7d7;
     --bcrl_icon-solution-font-color: #a074c4;
+    --bcrl_icon-dot-net-solution-folder-font-color: #61a7c9;
     --bcrl_icon-project-font-color: #88d184;
     --bcrl_icon-razor-font-color: #c586c0;
     --bcrl_icon-folder-font-color: #d7ab69;
