--- a/BlazorCommon.RazorLib/wwwroot/blazorCommon.css
+++ b/BlazorCommon.RazorLib/wwwroot/blazorCommon.css
@@ -323,7 +323,7 @@ ul.bcrl_indent-child-content {
     --bcrl_resize-column-background-color: #d7d7d7;
     --bcrl_resize-row-background-color: #d7d7d7;
     --bcrl_icon-solution-font-color: #a074c4;
-    --bcrl_icon-dot-net-solution-folder-font-color: #61a7c9;
+    --bcrl_icon-dot-net-solution-folder-font-color: #5c7feb;
     --bcrl_icon-project-font-color: #88d184;
     --bcrl_icon-razor-font-color: #c586c0;
     --bcrl_icon-folder-font-color: #d7ab69;
@@ -401,6 +401,7 @@ ul.bcrl_indent-child-content {
     --bcrl_resize-column-background-color: black;
     --bcrl_resize-row-background-color: black;
     --bcrl_icon-solution-font-color: #8f38d6;
+    --bcrl_icon-dot-net-solution-folder-font-color: #252ff1;
     --bcrl_icon-project-font-color: #23d519;
     --bcrl_icon-razor-font-color: #c509db;
     --bcrl_icon-folder-font-color: #a46d00;
