Fixes for missing async where there should be

--- a/BlazorCommon.RazorLib/Menu/MenuDisplay.razor
+++ b/BlazorCommon.RazorLib/Menu/MenuDisplay.razor
@@ -10,7 +10,7 @@
      @oncontextmenu:preventDefault="true"
      @oncontextmenu:stopPropagation="true">
 
-    <CascadingValue Value="RestoreFocusToThisMenu" Name="ReturnFocusToParentAction">
+    <CascadingValue Value="RestoreFocusToThisMenuAsync" Name="ReturnFocusToParentFuncAsync">
         @{
             if (GroupByMenuOptionKind)
             {
